Fixed spacings

--- a/style.sass
+++ b/style.sass
@@ -29,6 +29,9 @@ h2
 .select 
     display: grid !important;
 
+.mt-7
+    margin-top: 5rem;
+
 .mb-7
     margin-bottom: 5rem;
 
@@ -87,13 +90,11 @@ h2
 
 .dropdown2 
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-50%, 250%);
 
 .dropdown-menu
     position: absolute;
-    top: 50%;
     left: 50%;
     transform: translate(-25%, -40%);
 
